Update contact link to use email instead of protection

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar-links">
         <a href="#projects" class="navbar-link">Projects</a>
         <a href="#myjourney" class="navbar-link">My Journey</a>
-        <a href="/cdn-cgi/l/email-protection#3953585a525f5c5c570b795e54585055175a5654" class="navbar-link">Contact</a>
+        <a href="mailto:jackfeenschool@gmail.com" class="navbar-link">Contact</a>
         <div class="theme-toggle">
             <span class="toggle-icon">☀️</span>
             <div class="toggle-switch" id="themeToggle">
@@ -45,7 +45,7 @@
             <a href="https://www.linkedin.com/in/jackafeen/" target="_blank">
               <img src="linkedin.png" alt="LinkedIn" class="icon-btn">
             </a>
-            <a href="/cdn-cgi/l/email-protection#a3c9c2c0c8c5c6c6cd91e3c4cec2cacf8dc0ccce">
+            <a href="mailto:jackfeenschool@gmail.com" class="navbar-link">
               <img src="email.png" alt="Email" class="icon-btn">
             </a>
           </div>
