Change job title from 'Portfolio Optimization Researcher' to 'Investment Strategy Researcher'

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <a href = "https://www.linkedin.com/company/viseinc/">
                     <div class="timeline-content">
                         <div class="timeline-date">Spring 2026</div>
-                        <div class="timeline-title">Portfolio Optimization Researcher</div>
+                        <div class="timeline-title">Investment Strategy Researcher</div>
                         <div class="timeline-organization">Vise AI</div>
                         <span class="timeline-label">CAPSTONE</span>
                     </div>
