Add project highlight for sign-in feature

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                     </div>
                     <div class="project-body">
                     <ul class="project-highlights">
+                        <li><strong>Sign in</strong> Username: "a", no password</li>
                         <li><strong>Generated a large-scale game database</strong> using Monte Carlo Tree Search (MCTS) to simulate high-quality gameplay</li>
                         <li><strong>Trained a Transformer and CNN</strong> to predict optimal moves from board states, evaluated against MCTS at varying simulation strengths</li>
                         <li><strong>Built and deployed a full-stack web app</strong> in Anvil with a Dockerized backend hosted on AWS Lightsail — users can play directly against the trained neural network</li>
